--- a/data/docker/docker-compose.yml
+++ b/data/docker/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.7"
 services:
   postgres:
-    image: postgres:10.5
+    image: postgres:12
     restart: always
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=postgrespassword
     logging:
       options:
         max-size: 10m
@@ -15,3 +15,23 @@ services:
     volumes:
       - ./create-tables.sql:/docker-entrypoint-initdb.d/create-tables.sql
       - ./seed-data.sql:/docker-entrypoint-initdb.d/seed-data.sql
+  graphql-engine:
+    image: hasura/graphql-engine:v2.13.0
+    ports:
+      - "8085:8080"
+    depends_on:
+      - "postgres"
+    restart: always
+    environment:
+      ## postgres database to store Hasura metadata
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
+      ## this env var can be used to add the above postgres database to Hasura as a data source
+      PG_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
+      ## enable the console served by server
+      HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
+      ## enable debugging mode
+      HASURA_GRAPHQL_DEV_MODE: "true"
+      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
+      HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+volumes:
+  db_data:
