--- a/ui/package.json
+++ b/ui/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@auth0/auth0-vue": "^1.0.2",
+    "@vue/apollo-composable": "^4.0.0-beta.1",
+    "@vue/apollo-util": "^4.0.0-alpha.18",
     "core-js": "^3.8.3",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
