Add pinia and userStore

--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "pinia": "^2.0.23",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
